# ros-riegl-vz

./: .gitignore  CHANGELOG  NOTICE  README.md  changelog.txt  requirements.txt
docker/: Dockerfile  Dockerfile.galactic  Dockerfile.humble  README.md
foxglove/: RIEGL VZ Default.json  diagnostics.json  scan.json
foxglove-studio/: RIEGL VZ Default.json
install/: local_setup.sh  setup.sh
librdb/: riegl.rdb-2.3.4-cp34.cp35.cp36.cp37.cp38.cp39-none-linux_x86_64.whl  riegl.rdb-2.3.4-cp34.cp35.cp36.cp37.cp38.cp39-none-linux_x86_64.whl.sha1  riegl.rdb-2.3.7-cp34.cp35.cp36.cp37.cp38.cp39-none-linux_aarch64.whl  riegl.rdb-2.3.7-cp34.cp35.cp36.cp37.cp38.cp39-none-linux_aarch64.whl.sha1  riegl.rdb-2.3.7-cp34.cp35.cp36.cp37.cp38.cp39-none-linux_x86_64.whl  riegl.rdb-2.3.7-cp34.cp35.cp36.cp37.cp38.cp39-none-linux_x86_64.whl.sha1  riegl.rdb-2.4.0-cp34.cp35.cp36.cp37.cp38.cp39.cp310-none-linux_aarch64.whl  riegl.rdb-2.4.0-cp34.cp35.cp36.cp37.cp38.cp39.cp310-none-linux_aarch64.whl.sha1  riegl.rdb-2.5.3-py3-none-linux_aarch64.whl  (+5 more)
riegl_vz/: LICENSE  README.md  README.md.html  package.xml  setup.cfg  setup.py
riegl_vz/config/: params_controlpoints.yaml  params_default.yaml  params_robomole.yaml  params_vmr.yaml
riegl_vz/files/: controlpoints.csv
riegl_vz/img/: cs.drawio  robot_cs.drawio  scan.drawio
riegl_vz/launch/: H2222273_launch.py  debug_launch.py  standard_launch.py  std_launch.py
riegl_vz/riegl_vz/: LICENSE  __init__.py  acquire-data.py  create-rdbx.py  fastpos-rdbx.py  geosys.py  pose.py  project.py  quaternion.py  register-scan-coarse.py  register-scan.py  riegl_vz.py  ssh.py  status.py  utils.py  voxel_grid.py
vzi_services/: package.xml  setup.cfg  setup.py
vzi_services/vzi_services/: COPYING  README  cameraservice.py  cloudstorageservice.py  controlservice.py  geosysservice.py  gnssbaseservice.py  interfaceservice.py  projectservice.py  riconnectswitch.py  rtktrajectoryservice.py  scannerservice.py
(+52 files in other folders)
