<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>riegl_vz</name>
  <version>1.4.0</version>
  <description>ROS2 (Roboter Operating System) package for RIEGL VZ-i scanner series</description>
  <maintainer email="afriedl@riegl.com">Andreas Friedl</maintainer>
  <license>Apache 2.0 License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>vzi_services</exec_depend>
  <exec_depend>riegl_vz_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
