<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vzi_services</name>
  <version>0.0.0</version>
  <description>RIEGL client service communication library for 3D scanners</description>
  <maintainer email="afriedl@riegl.com">Andreas Friedl</maintainer>
  <license>RIEGL License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>riconnect</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
